--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "displayName": "Secret Keeper",
   "description": "Oculta tus variables sensibles de los chismosos",
   "publisher": "SecretKeeper",
-  "version": "0.0.4",
+  "version": "0.0.5",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/klewicki7/secret-keeper.git"
+  },
   "engines": {
     "vscode": "^1.94.0"
   },
