--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "secret-keeper-vscode",
-  "displayName": "Secret Keeper",
+  "displayName": "Secret Value",
   "description": "Oculta tus variables sensibles de los chismosos",
   "publisher": "SecretKeeper",
   "version": "0.0.8",
